# rubiks

./: .gitignore  CMakeLists.txt  build-wsl.sh  const.hxx  except.hxx  game.cxx  game.hxx  gen_precalls.sh  geom.cxx  geom.hxx  gfx.cxx  gfx.hxx  gl.cxx  gl.hxx  gl_calls.cxx  gl_calls.hxx  iterator.hxx  keys.cxx  keys.hxx  main.cxx  mingw-w64-wsl.cmake  shader.cxx  shader.hxx  utility.cxx  utility.hxx  window.cxx  window.hxx
shaders/: simple.fragment.glsl  simple.vertex.glsl
